[package]
name = "string_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "string_validator"
crate-type = ["cdylib"]

[dependencies]
cuid = "1.3.1"
pyo3 = "0.18.1"
validator = { version = "0.16.0", features = ["card", "phone", "unic"] }
