[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "string_validator"
version = "0.1.0"
description = "A fast and correct Python string validator library"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tropicbliss/stringvalidator"
keywords = ["string", "validator", "fast"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
