[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "string_validator"
version = "0.1.7"
description = "A fast and correct Python string validator library"
readme = "README.md"
authors = [{ name = "tropicbliss", email = "tropicbliss@protonmail.com" }]
license = { file = "LICENSE" }
keywords = ["string", "validator", "fast"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/tropicbliss/stringvalidator"


[tool.maturin]
features = ["pyo3/extension-module"]
